# news_collect

./: .dockerignore  .env  .env.example  .gitignore  Dockerfile.client  Dockerfile.server  README.md  aI-news.yaml  config.py  docker-compose.yml  main.py  pyproject.toml  server.py
client/: Dockerfile.client  client.py  gemini_integration.py
mcp-server/: config.py  server.py
mcp-server/prompt/: prompt.py
mcp-server/resource/: __init__.py  data_service.py
mcp-server/tool/: tool.py  tool1.py
prompt/: __init__.py  prompt.py
resource/: __init__.py  article_extractor.py  article_extractor_test.py  data_service.py
src/mcp_server/: Dockerfile.server  config.py  server.py
src/mcp_server/prompt/: __init__.py  prompt.py
src/mcp_server/tool/: __init__.py  tool.py
test/: test_gemini.py
tool/: __init__.py  tool.py  tool1.py
