[project]
name = "naver-news"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=2.13.0.2",
    "httpx>=0.28.1",
    "mcp[cli]>=1.19.0",
    "pydantic>=2.6.0",
    "requests>=2.32.0",
    "beautifulsoup4>=4.12.0",
    "python-dotenv>=1.0.0",
    "google-genai>=0.2.1",
]
